# DuckGame

./: .gitignore  CMakeLists.txt  README.md  install.sh
client/: CMakeLists.txt  camera.cpp  camera.h  client.cpp  client.h  client_game_map.cpp  client_game_map.h  client_inputhandler.cpp  client_inputhandler.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  game_initializer.cpp  game_initializer.h  game_state.h  main.cpp  sdl_audiomanager.cpp  sdl_audiomanager.h  sdl_button.cpp  sdl_button.h  sdl_eventprocessor.cpp  sdl_eventprocessor.h  sdl_handler.cpp  sdl_handler.h  sdl_handletextures.cpp  sdl_handletextures.h  sdl_renderermanager.cpp  sdl_renderermanager.h  sdl_screenmanager.cpp  sdl_screenmanager.h  sdl_texturehandler.cpp  sdl_texturehandler.h
client/scene/: lobby_scene.cpp  lobby_scene.h
common/: CMakeLists.txt  client_protocol.h  command.cpp  command.h  constants.h  executable.h  liberror.cpp  lobby_command.cpp  lobby_command.h  lobby_message.h  message.h  position.h  resolver.cpp  resolvererror.cpp  sendable.h  socket.cpp
editor/: CMakeLists.txt  level_editor.cpp  level_editor.h  main.cpp  map1.txt
editor/levels/: level.txt  level1.txt  level2.txt  map1.txt  map2.txt
mapConfigs/: map1.txt
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  executable.h  game.c  game.cpp  game.h  game_map.cpp  game_queue_monitor.cpp  level_manager.cpp  level_manager.h  lobby.cpp  lobby.h  lobby_player.cpp  lobby_player.h  lobby_receiver.cpp  lobby_receiver.h  main.cpp  match.cpp  match.h  move_left_command.h  parser.cpp  parser.h  player.cpp  player.h  receiver.cpp  receiver.h  round_manager.cpp  round_manager.h  sender.cpp  sender.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h
server/armor/: armor.cpp  armor.h  helmet.cpp  helmet.h
server/executables/: commands.h  executable.h  leave_gun_command.cpp  leave_gun_command.h  move_down_command.cpp  move_down_command.h  move_left_command.cpp  move_left_command.h  move_right_command.cpp  move_right_command.h  move_up_command.cpp  move_up_command.h  shoot_command.cpp  shoot_command.h
server/executables/guns_commands/: drop_weapon_command.cpp  drop_weapon_command.h  leave_gun_command.cpp  leave_gun_command.h  shoot_command.cpp  shoot_command.h  take_item_command.cpp  take_item_command.h
server/executables/start/: look_up_command.cpp  look_up_command.h  move_down_command.cpp  move_down_command.h  move_left_command.cpp  move_left_command.h  move_right_command.cpp  move_right_command.h  move_up_command.cpp  move_up_command.h
server/executables/stop/: stop_jump_command.cpp  stop_jump_command.h  stop_look_up_command.cpp  stop_look_up_command.h  stop_move_command.cpp  stop_move_command.h  stop_move_down_command.cpp  stop_move_down_command.h  stop_move_left_command.cpp  stop_move_left_command.h  stop_move_right_command.cpp  stop_move_right_command.h  stop_move_up_command.cpp  stop_move_up_command.h
server/game/: box.cpp  box.h  duck.cpp  duck.h  game.cpp  game.h  game_map.cpp  game_map.h  game_queue_monitor.cpp  game_queue_monitor.h  item.cpp  item.h  round_manager.cpp  round_manager.h  spawn_place.cpp  spawn_place.h
server/guns/: ak_47.cpp  ak_47.h  banana.cpp  banana.h  bouncing_laser.cpp  bouncing_laser.h  bullet.cpp  bullet.h  cowboy_pistol.cpp  cowboy_pistol.h  duel_pistol.cpp  duel_pistol.h  grenade.cpp  grenade.h  grenade_fragment.cpp  grenade_fragment.h  gun.cpp  gun.h  laser.cpp  laser.h  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  pew_pew_laser.cpp  pew_pew_laser.h  projectile.cpp  projectile.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h  weapon.cpp  weapon.h
server/lobby/: lobby.cpp  lobby.h  lobby_player.cpp  lobby_player.h  lobby_receiver.cpp  lobby_receiver.h
server/mapsConfigs/: map1.txt
tests/: CMakeLists.txt  box_tests.cpp  duck_tests.cpp  foo.cpp  game_map_tests.cpp  game_tests.cpp  match_tests.cpp  round_manager_tests.cpp
